--- a/journal/202004.md
+++ b/journal/202004.md
@@ -13,13 +13,15 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 [dcrd](https://github.com/decred/dcrd):
 
 - `schnorr`: improvements to safety, testing and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
-- more parts of the codebase migrated from Go's standard big integers to specialized field types, bringing incremental performance improvements
+- more parts of the codebase migrated from Go's standard big integers to specialized field types, making significant performance improvements
 
 { meta: what is the idea behind focusing on schnorr recently? is it for the treasury work? }
 
-Lots of optimizations made in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
+Lots of optimizations in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
 
-{ any perf numbers to present are welcome (% changes, IBD times, etc) }
+{ any perf numbers to present are welcome, like % changes, IBD times, etc }
+
+{ any comment on "unforking" dcrd/dcrwallet from btc/btcwallet is welcome }
 
 In progress:
 
@@ -40,7 +42,7 @@ In progress:
 [Politeia](https://github.com/decred/politeia):
 
 - new [method](https://github.com/decred/politeia/pull/1137) to query line items that have been billed to the given proposal
-- [separated](https://github.com/decred/politeia/pull/1175) metadata out of Politeia proposals and CMS invoices - this removes a hacky way to store proposal title that was used previously and allows to add arbitrary metadata, including the fields required by the RFP-type proposals
+- [separated](https://github.com/decred/politeia/pull/1175) metadata out of Politeia proposals and CMS invoices - this removes a hacky way to store proposal title that was used previously and allows to add arbitrary metadata, including the fields required by the RFP proposals
 - part of the work to allow viewing Politeia [without javascript](https://github.com/decred/politeiagui/pull/1833)
 - normalized and added [caching](https://github.com/decred/politeiagui/pull/1844) for paywall data
 - [finished](https://github.com/decred/politeiagui/pull/1857) the [refactoring](https://github.com/decred/politeiagui/issues/1490) of the state management system
@@ -54,8 +56,8 @@ In progress:
 
 - added [cache](https://github.com/decred/dcrpool/pull/180), which improved the data flow (the hub now pushes new data into the cache instead of the GUI polling for it), improved rate limiting
 - added pagination in several places
-- configurable [account](https://github.com/decred/dcrpool/pull/191) for paying rewards
-- added GUI to [requesting a payment](https://github.com/decred/dcrpool/pull/198) manually and clear any remaining balance
+- configurable [account](https://github.com/decred/dcrpool/pull/191) for paying rewards from
+- added GUI to [request a payment](https://github.com/decred/dcrpool/pull/198) manually and clear any remaining balance
 - increased test coverage
 
 [dcrlnd](https://github.com/decred/dcrlnd): In progress:
