--- a/journal/202004.md
+++ b/journal/202004.md
@@ -159,9 +159,9 @@ For more detail on these see issue [30](https://blockcommons.red/politeia-digest
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: [April's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of {date}: {pool name n%, ...}. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: [April's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k8h1h492-k9n6vzdc&scale=linear&bin=block&axis=time) opened at ~341 Ph/s and closed ~360 Ph/s, bottoming at 240 Ph/s and peaking at 470 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of May 1: UUPool 46%, Poolin 22%, lab.antpool.com 17%,F2Pool 2%, Luxor 2%, BTC.com 1.6%, BeePool 0.12%, CoinMine 0.05%, Suprnova 0.02% and others ~8%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was {n.n, try to snapshot it on 1st} DCR (+{n.n}). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&bin=window&axis=time) {set zoom to show the month} varied between {n.n}-{n.n} DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 137.82 DCR (-4.08). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k8gg8atj-k9ml7n4w&scale=linear&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 142.8-131.7 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k8gizzc5-k9mohzcd&scale=linear&bin=block&axis=time&visibility=true-false) was 5.62-5.71 million DCR, which corresponded to 49.2-50.3% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k8gjtr97-k9mpcc5p&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
 
 { hint: second source for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -169,45 +169,21 @@ Staking: [30-day average](https://dcrstats.com/) ticket price was {n.n, try to s
 
 { hint: consider keeping Block size and Transactions sections every 2nd or 3rd month, unless there is something interesting to report }
 
-Block size: This month, the blockchain size grew by {n} MB. [Block size](https://explorer.dcrdata.org/charts?chart=block-size&bin=block&axis=time) {set zoom to show the month} varied between {n.n}-{n.n} with an average of {n.n} KB. {any interesting fact about this month's blocks}
+Block size: This month, the blockchain size grew by 112 MB. [Block size](https://explorer.dcrdata.org/charts?chart=block-size&bin=block&axis=time) {set zoom to show the month} varied between {n.n}-{n.n} with an average of {n.n} KB. {any interesting fact about this month's blocks}
 
 Transactions: In April, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585699200000&to=1588291200000) there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585692000000&to=1588283999000) there was an average of 131 public listening nodes and 206 total nodes per dcr.farm.  Average version distribution for Apr: 38% dcrd v1.5.1, 13.6% dcrd v1.5, 5.1% dcrd v1.6 dev builds, 4.6% dcrd v1.4, 4.6% dcrd v1.5 dev and RC builds, 7.6% dcrwallet v1.5.1, 3.8% dcrwallet v1.4, 2.9% dcrwallet v1.5.
 
 {any interesting analysis or events in the network}
 
-On-chain update https://twitter.com/_Checkmatey_/status/1247649984473894912
+`@_Checkmatey_` gave us two new updates.
 
-https://ournetwork.substack.com/p/our-network-issue-15
+One as part of his contribution to the decred section of the ["Our Network"](https://twitter.com/_Checkmatey_/status/1247649984473894912) news [letter](https://twitter.com/_Checkmatey_/status/1247649984473894912).
 
-tx volumes https://twitter.com/_Checkmatey_/status/1255084712386654209
-
-## Integrations
-
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
-
-https://twitter.com/metalpaysme/status/1249745420206686208
-
-- MetalPay allows to pay people using your cash balance, linked bank account or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
-- { how many assets do they have listed? }
-
-https://twitter.com/SwapSpaceCo/status/1250078395884539906
-
-SimpleSwap:
-
-- https://twitter.com/SimpleSwap_io/status/1252914580851998720
-- long list of coins https://simpleswap.io/coins
-- { is it a new integration or an update from an old one? when did it add dcr? }
-
-{ @zubair summary: how it works, standard vs light, when launch(ed), status }
-
-- https://twitter.com/steelbackup/status/1248058631523905538
-- https://steelbackup.com/
-
-Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+And [another](https://twitter.com/_Checkmatey_/status/1255084712386654209) about increasing transaction volumes due to increased privacy usage. 
 
 ## Adoption
 
