Updated Outreach section
Monde PR's achievements for April

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -228,6 +228,19 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities 
 
+Monde PR’s achievements for April:
+
+- created and pitched a story idea targeted at investing, VC and tech publications 
+- created and pitched a story idea targeted at crypto and fintech publications
+- created and pitched a story idea targeted at personal finance publications 
+- submitted comments from Decred spokespeople to seven news stories
+- secured a media interview with a mainstream newswire and three email Q&As with mainstream and crypto publications 
+
+News coverage secured by Monde PR:
+
+- A thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/04/open-source-response-covid-19/) by @RichardRed
+- An article in [Cointelegraph](https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education) featuring commentary by @jy-p on the future of stablecoins, syndicated to [Investing.com]9https://www.investing.com/news/cryptocurrency-news/g20s-harsh-stance-on-stablecoin-is-a-step-forward-but-regulators-have-more-to-learn-21442000 and[Bitcoin News Network](https://www.btcnn.com/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education/) 
+
 ## Events
 
 Attended:
