Updated Outreach Section
Fixed another link

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -239,7 +239,7 @@ Monde PR’s achievements for April:
 News coverage secured by Monde PR:
 
 - A thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/04/open-source-response-covid-19/) by @RichardRed
-- An article in [Cointelegraph](https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education) featuring commentary by @jy-p on the future of stablecoins, syndicated to [Investing.com](https://www.investing.com/news/cryptocurrency-news/g20s-harsh-stance-on-stablecoin-is-a-step-forward-but-regulators-have-more-to-learn-21442000 and [Bitcoin News Network](https://www.btcnn.com/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education/) 
+- An article in [Cointelegraph](https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education) featuring commentary by @jy-p on the future of stablecoins, syndicated to [Investing.com](https://www.investing.com/news/cryptocurrency-news/g20s-harsh-stance-on-stablecoin-is-a-step-forward-but-regulators-have-more-to-learn-2144200) and [Bitcoin News Network](https://www.btcnn.com/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education/) 
 
 ## Events
 
