--- a/journal/202004.md
+++ b/journal/202004.md
@@ -233,7 +233,7 @@ Monde PR’s achievements for April:
 - created and pitched a story idea targeted at investing, VC and tech publications 
 - created and pitched a story idea targeted at crypto and fintech publications
 - created and pitched a story idea targeted at personal finance publications 
-- submitted comments from Decred spokespeople to seven news stories
+- submitted comments from Decred spokespeople to eight news stories
 - secured a media interview with a mainstream newswire and three email Q&As with mainstream and crypto publications 
 
 News coverage secured by Monde PR:
