--- a/journal/202004.md
+++ b/journal/202004.md
@@ -196,8 +196,10 @@ Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [s
 - MetalPay allows to pay people using your cash balance, linked bank account or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
 - { how many assets do they have listed? }
 
+
+An instant exchange SwapSpace [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
+
 {{
-https://twitter.com/SwapSpaceCo/status/1250078395884539906 {https://github.com/decred/dcrweb/issues/869}
 
 SimpleSwap:
 
