spell and grammer check

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -8,11 +8,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
+Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
 [dcrd](https://github.com/decred/dcrd):
 
-- `schnorr`: improvements to safety, testing and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
+- `schnorr`: improvements to safety, testing, and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
 - more parts of the codebase migrated from Go's standard big integers to specialized field types, making significant performance improvements
 
 { meta: what is the idea behind focusing on schnorr recently? is it for the treasury work? }
@@ -25,7 +25,7 @@ Lots of optimizations in dcrd made over the past months have led to a "suffering
 
 In progress:
 
-- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? }
+- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? }
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
@@ -146,9 +146,9 @@ Community stats:
 
 In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,250 DCR and spent 17,228 DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of $13.40, the USD figure billed for work completed in that month is $231K. As of May 3, Treasury balance is 636,000 DCR (9.17 million USD at $14.42).
 
-Two new proposals were submitted in April, [one](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1	) for a billboard marketing campaign was rejected with 17% approval (31% turnout) and [another](https://proposals.decred.org/proposals/83b59ef5ab40193a86073abbd93cea13ed6d071eecc78918ab5cf98cba7c7a67	) from CryptoNoticias for a content marketing campaign was also rejected with 31% approval and 30% turnout.
+Two new proposals were submitted in April, [one](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1    ) for a billboard marketing campaign was rejected with 17% approval (31% turnout) and [another](https://proposals.decred.org/proposals/83b59ef5ab40193a86073abbd93cea13ed6d071eecc78918ab5cf98cba7c7a67    ) from CryptoNoticias for a content marketing campaign was also rejected with 31% approval and 30% turnout.
 
-The two proposals from March voted on this month were also rejected. DCR [Comic](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f	) 2 had support from 49.4% of the tickets that voted (participation of 19%), while the Decred Daily [proposal](https://proposals.decred.org/proposals/7d42c6f4bf3059b64789185af615c1df97cb61a379425933be5ff01d074ed4d5	) had 44% approval from the 17% of eligible tickets that voted.
+The two proposals from March voted on this month were also rejected. DCR [Comic](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f    ) 2 had support from 49.4% of the tickets that voted (participation of 19%), while the Decred Daily [proposal](https://proposals.decred.org/proposals/7d42c6f4bf3059b64789185af615c1df97cb61a379425933be5ff01d074ed4d5    ) had 44% approval from the 17% of eligible tickets that voted.
 
 For more detail on these see issue [30](https://blockcommons.red/politeia-digest/issue030/) of Politeia Digest.
 
@@ -193,7 +193,7 @@ And [another](https://twitter.com/_Checkmatey_/status/1255084712386654209) about
 
 Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [support](https://blog.metalpay.com/metal-pay-welcomes-decred/) for DCR on their market place. It provides another Fiat onramp and works in most US states. They followed the announcement with [tweets](https://twitter.com/metalpaysme/status/1250424090172612615) about Decred. 
 
-- MetalPay allows to pay people using your cash balance, linked bank account or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
+- MetalPay allows to pay people using your cash balance, linked bank account, or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
 - { how many assets do they have listed? }
 
 
@@ -305,7 +305,7 @@ Audio:
 
 - Rough Consensus Ep. 4 Gold, Bitcoin and Decred ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred))
 
-- Decred in Depth (has given up on numbering) - Chris Burniske of Placeholder VC talks about recent developments, why Decred HAS (Hypersecure Adaptable Sustainable) it, opportunities for dcrdex and Politeia to expand the Decred ecosystem, and much more! ([soundcloud](https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the))
+- Decred in Depth (has given up on numbering) - Chris Burniske of Placeholder VC talks about recent developments, why Decred HAS (Hypersecure Adaptable Sustainable) it, opportunities for dcrdex, and Politeia to expand the Decred ecosystem, and much more! ([soundcloud](https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the))
 
   
 
@@ -322,7 +322,7 @@ Comm systems news:
 Selected Reddit posts:
 
 - The Decred Journal's own reddit [post](https://www.reddit.com/r/decred/comments/fy493y/decred_journal_march_2020/) was the most discussed one on the subreddit this month with 42 comments! 
-- The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) related to @checkmate's tweet comparing DCR attack cost to other chains saw discussion on reddit too.
+- The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) related to @checkmate's tweet comparing DCR attack cost to other chains saw a discussion on reddit too.
 
 Selected Twitter discussions:
 
@@ -363,7 +363,7 @@ There have been a whole [barrage](https://www.theblockcrypto.com/post/60930/top-
 
 https://twitter.com/glassnodealerts/status/1245612312964161538
 
-In an update to the story about sale of .org domain to a private equity firm, ICANN has [voted](https://twitter.com/EFF/status/1256053946289774594) to reject the sale, effectively blocking it.
+In an update to the story about the sale of .org domain to a private equity firm, ICANN has [voted](https://twitter.com/EFF/status/1256053946289774594) to reject the sale, effectively blocking it.
 
 { org-sale victory? https://twitter.com/EFF/status/1256053946289774594 }
 
@@ -373,7 +373,7 @@ In an update to the story about sale of .org domain to a private equity firm, IC
 
 This is issue 25 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
-Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
+Most information from third parties is relayed directly from source after a minimal sanity check. The authors of the Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
 Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#feedback) and [contributions](https://github.com/xaur/decred-news/blob/docs/contributing.md) are always welcome.
 
