Dev reword about tests

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -108,7 +108,7 @@ dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwall
 - basic support for [GCS filters](https://github.com/decred/tinydecred/pull/149)
 - further increased test coverage in a [crusade](https://github.com/decred/tinydecred/issues/70) for an unforgiving test suite
 - all tests have been migrated to [pytest](https://github.com/decred/tinydecred/pull/161)
-- boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds. Fast tests grant productive development and a joy of life.
+- boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds. Fast tests allow productive development and are a joy of life.
 
 [docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/1087) a [page](https://docs.decred.org/advanced/mnemonic-seed/) documenting the differences between Decred and BIP-0039 seeds.
 
