Dev dcrwallet add treasury PR

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -34,6 +34,10 @@ In progress:
 
 dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd and has 137 own forks as of writing.
 
+In progress:
+
+- Decentralized Treasury Spending [support](https://github.com/decred/dcrwallet/pull/1714) for the wallet corresponding to the work in dcrd.
+
 [Decrediton](https://github.com/decred/decrediton):
 
 - [first](https://github.com/decred/decrediton/pull/2448) [steps](https://github.com/decred/decrediton/pull/2449) to migrate to functional components (a newer [approach](https://programmingwithmosh.com/react/react-functional-components/) in the React framework - they are easier to reason about and test)
