Dev mention release tool

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -125,6 +125,7 @@ In progress:
 
 Other:
 
+- the [release](https://github.com/decred/release) tool for building reproducible executables was moved under the `decred` GitHub org.
 - @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues) for implementing his metrics in dcrdata { correct? keep? }
 - GitHub has made all core features [free for everyone](https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans), which includes private repos for unlimited users
 
