--- a/journal/202004.md
+++ b/journal/202004.md
@@ -151,11 +151,11 @@ Community stats as of May 1:
 
 In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,250 DCR and spent 17,228 DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of $13.40, the USD figure billed for work completed in that month is $231K. As of May 3, Treasury balance is 636,000 DCR (9.17 million USD at $14.42).
 
-Two new proposals were submitted in April, [one](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1    ) for a billboard marketing campaign was rejected with 17% approval (31% turnout) and [another](https://proposals.decred.org/proposals/83b59ef5ab40193a86073abbd93cea13ed6d071eecc78918ab5cf98cba7c7a67    ) from CryptoNoticias for a content marketing campaign was also rejected with 31% approval and 30% turnout.
+Two new proposals were submitted in April, [one](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1) for a billboard marketing campaign was rejected with 17% approval (31% turnout) and [another](https://proposals.decred.org/proposals/83b59ef5ab40193a86073abbd93cea13ed6d071eecc78918ab5cf98cba7c7a67) from CryptoNoticias for a content marketing campaign was also rejected with 31% approval and 30% turnout.
 
-The two proposals from March voted on this month were also rejected. DCR [Comic](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f    ) 2 had support from 49.4% of the tickets that voted (participation of 19%), while the Decred Daily [proposal](https://proposals.decred.org/proposals/7d42c6f4bf3059b64789185af615c1df97cb61a379425933be5ff01d074ed4d5    ) had 44% approval from the 17% of eligible tickets that voted.
+The two proposals from March voted on this month were also rejected. [DCR Comic 2](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f) had support from 49.4% of the tickets that voted (participation of 19%), while the [Decred Daily](https://proposals.decred.org/proposals/7d42c6f4bf3059b64789185af615c1df97cb61a379425933be5ff01d074ed4d5) proposal had 44% approval from the 17% of eligible tickets that voted. Both did not reach the quorum of 20% votes.
 
-For more detail on these see issue [30](https://blockcommons.red/politeia-digest/issue030/) of Politeia Digest.
+For more detail on these see [issue 30](https://blockcommons.red/politeia-digest/issue030/) of Politeia Digest.
 
 ## Network
 
