--- a/journal/202004.md
+++ b/journal/202004.md
@@ -164,9 +164,9 @@ For more detail on these see [issue 30](https://blockcommons.red/politeia-digest
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: [April's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k8h1h492-k9n6vzdc&scale=linear&bin=block&axis=time) opened at ~341 Ph/s and closed ~360 Ph/s, bottoming at 240 Ph/s and peaking at 470 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of May 1: UUPool 46%, Poolin 22%, lab.antpool.com 17%,F2Pool 2%, Luxor 2%, BTC.com 1.6%, BeePool 0.12%, CoinMine 0.05%, Suprnova 0.02% and others ~8%. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: [April's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k8f3rvwm-k9oqhibz&scale=linear&bin=block&axis=time) opened at ~302 Ph/s and closed ~360 Ph/s, bottoming at 240 Ph/s and peaking at 470 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of May 1: UUPool 46%, Poolin 22%, lab.antpool.com 17%, F2Pool 2%, Luxor 2%, BTC.com 1.6%, BeePool 0.12%, CoinMine 0.05%, Suprnova 0.02% and others ~9%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 137.82 DCR (-4.08). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k8gg8atj-k9ml7n4w&scale=linear&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 142.8-131.7 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k8gizzc5-k9mohzcd&scale=linear&bin=block&axis=time&visibility=true-false) was 5.62-5.71 million DCR, which corresponded to 49.2-50.3% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k8gjtr97-k9mpcc5p&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 137.8 DCR (-4.1). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k8f3rvwm-k9oqhibz&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 131.7-142.8 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k8f3rvwm-k9oqhibz&scale=linear&bin=block&axis=time) was 5.62-5.71 million DCR, which corresponded to 49.2-50.3% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k8f3rvwm-k9oqhibz&scale=linear&bin=block&axis=time) in PoS.
 
 { hint: second source for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -180,16 +180,15 @@ Transactions: In April, Decred users made {n} regular transactions and bought {n
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585692000000&to=1588283999000) there was an average of 131 public listening nodes and 206 total nodes per dcr.farm.  Average version distribution for Apr: 38% dcrd v1.5.1, 13.6% dcrd v1.5, 5.1% dcrd v1.6 dev builds, 4.6% dcrd v1.4, 4.6% dcrd v1.5 dev and RC builds, 7.6% dcrwallet v1.5.1, 3.8% dcrwallet v1.4, 2.9% dcrwallet v1.5.
+Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585699200000&to=1588291200000) there was an average of 131 public listening nodes and 206 total nodes per dcr.farm. Average version distribution for Apr: 44% dcrd v1.5.1, 16% dcrd v1.5, 6% dcrd v1.6 dev builds, 4% dcrd v1.4, 5% dcrd v1.5 dev and RC builds, 9% dcrwallet v1.5.1, 2.4% dcrwallet v1.4, 1.4% dcrwallet v1.5.
 
 {any interesting analysis or events in the network}
 
 `@_Checkmatey_` gave us two new updates.
 
-One as part of his contribution to the decred section of the ["Our Network"](https://twitter.com/_Checkmatey_/status/1247649984473894912) news [letter](https://twitter.com/_Checkmatey_/status/1247649984473894912).
+One as part of his contribution to the Decred section of the [Our Network](https://twitter.com/_Checkmatey_/status/1247649984473894912) newsletter.
 
-And [another](https://twitter.com/_Checkmatey_/status/1255084712386654209) about increasing transaction volumes due to increased privacy usage. 
-
+And [another](https://twitter.com/_Checkmatey_/status/1255084712386654209) about increasing transaction volumes due to increased privacy usage.
 
 ## Integrations
 
