--- a/journal/202004.md
+++ b/journal/202004.md
@@ -180,7 +180,7 @@ Transactions: In April, Decred users made {n} regular transactions and bought {n
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585699200000&to=1588291200000) there was an average of 131 public listening nodes and 206 total nodes per dcr.farm. Average version distribution for Apr: 44% dcrd v1.5.1, 16% dcrd v1.5, 6% dcrd v1.6 dev builds, 4% dcrd v1.4, 5% dcrd v1.5 dev and RC builds, 9% dcrwallet v1.5.1, 2.4% dcrwallet v1.4, 1.4% dcrwallet v1.5.
+Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585699200000&to=1588291200000) there was an average of 131 public listening nodes and 206 total nodes per dcr.farm. Average version distribution for Apr: 44% dcrd v1.5.1, 16% dcrd v1.5, 6% dcrd v1.6 dev builds, 5% dcrd v1.5 dev and RC builds, 4% dcrd v1.4, 9% dcrwallet v1.5.1, 2.4% dcrwallet v1.4, 1.4% dcrwallet v1.5.
 
 {any interesting analysis or events in the network}
 
