--- a/journal/202004.md
+++ b/journal/202004.md
@@ -173,9 +173,9 @@ Updates from @Checkmate:
 
 ## Integrations
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+[dcr.blue](https://dcr.blue/) VSP announced that it will shut down in a message sent to all users with verified email on Apr 20. It was [removed](https://github.com/decred/dcrwebapi/pull/97) from the [listing](https://www.decred.org/vsp/) and Decrediton but will stay online for the rest of 2020. Since the maximum lifetime of a ticket is roughly 4.7 months, this gives users around 3 months to stop buying tickets assigned to DCR.Blue. Users are advised to backup their redeem scripts if they haven't already (a copy is available in the VSP account), and start buying tickets to a different VSP. Please avoid picking too large VSPs to maintain a healthy distribution and better security for the network. This is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past.
 
-{ writeup: dcr.blue is shutting down and no more tickets should be bought on that VSP. Also notable because it is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past }
+[decred.raqamiya.net](https://decred.raqamiya.net/) VSP that was [delisted](https://github.com/decred/dcrwebapi/pull/95) in March is now again operational and was [added back](https://github.com/decred/dcrwebapi/pull/96) to the listing. As of writing, it holds about 330 live tickets (0.8%), has 4 servers and features a custom UI.
 
 Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [support](https://blog.metalpay.com/metal-pay-welcomes-decred/) for DCR on their market place. It provides another Fiat onramp and works in most US states. They followed the announcement with [tweets](https://twitter.com/metalpaysme/status/1250424090172612615) about Decred. 
 
