--- a/journal/202004.md
+++ b/journal/202004.md
@@ -177,31 +177,14 @@ Updates from @Checkmate:
 
 [decred.raqamiya.net](https://decred.raqamiya.net/) VSP that was [delisted](https://github.com/decred/dcrwebapi/pull/95) in March is now again operational and was [added back](https://github.com/decred/dcrwebapi/pull/96) to the listing. As of writing, it holds about 330 live tickets (0.8%), has 4 servers and features a custom UI.
 
-Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [support](https://blog.metalpay.com/metal-pay-welcomes-decred/) for DCR on their market place. It provides another Fiat onramp and works in most US states. They followed the announcement with [tweets](https://twitter.com/metalpaysme/status/1250424090172612615) about Decred. 
+Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [support](https://blog.metalpay.com/metal-pay-welcomes-decred/) for DCR on their marketplace. It provides another fiat onramp and works in most US states. They followed the announcement with [tweets](https://twitter.com/metalpaysme/status/1250424090172612615) about Decred. 
 
-- MetalPay allows to pay people using your cash balance, linked bank account, or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
-- { how many assets do they have listed? }
+An instant exchange [SwapSpace](https://swapspace.co/) [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
 
-
-An instant exchange SwapSpace [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
-
-{{
-
-SimpleSwap:
-
-- https://twitter.com/SimpleSwap_io/status/1252914580851998720
-- long list of coins https://simpleswap.io/coins
-- { is it a new integration or an update from an old one? when did it add dcr? } {Already listed | https://github.com/decred/dcrweb/issues/477 }
-}}
-
-{ @zubair summary: how it works, standard vs light, when launch(ed), status }
-
-Steelbackup a physical seed backup solution added a new product and also [answered](https://twitter.com/steelbackup/status/1248058631523905538) some questions on how it works and the difference between its products. 
-
-- https://twitter.com/steelbackup/status/1248058631523905538
-- https://steelbackup.com/ {Down currently}
+[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a new product and also [answered](https://twitter.com/steelbackup/status/1248058631523905538) some questions on how it works and the difference between its products. { @zubair summary: how it works, standard vs light, when launch(ed), status }
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
 ## Adoption
 
 {new merchants}
