--- a/journal/202004.md
+++ b/journal/202004.md
@@ -342,6 +342,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, Exitus, pablito, richardred, s\_ben
-- reviews and feedback: davecgh, jholdstock, jrick
+- writing and editing: bee, degeri, Exitus, l1ndseymm, pablito, richardred, s\_ben
+- reviews and feedback: chappjc, davecgh, jholdstock, jrick, lukebp
 - title image: {}
