minor stuff plus consensus upcoming event

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -21,20 +21,20 @@ Lots of optimizations in dcrd made over the past months have led to a "suffering
 
 { any perf numbers to present are welcome, like % changes, IBD times, etc }
 
-The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different, any needed changes effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd, while btcd has 1,290. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
+The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd, while btcd has 1,290. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
 
 The `dcrctl` command-line app that controls dcrd and dcrwallet was split out of dcrd into its own [repository](https://github.com/decred/dcrctl) to address dependency and maintenance [issues](https://github.com/decred/dcrd/issues/2133).
 
 In progress:
 
-- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? }
+- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? rr: I think it's referring to the proposal as providing a spec of sorts }
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
 - new [`addtransaction`](https://github.com/decred/dcrwallet/pull/1712) command that will be particularly useful for the upcoming ticket-based VSP design
 - bug fixes and code maintenance
 
-dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd and has 137 own forks as of writing.
+dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd, and has 137 of its own forks as of writing.
 
 In progress:
 
@@ -149,7 +149,7 @@ Community stats as of May 1:
 
 ## Governance
 
-In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,250 DCR and spent 17,228 DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of $13.40, the USD figure billed for work completed in that month is $231K. As of May 3, Treasury balance is 636,000 DCR (9.17 million USD at $14.42).
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,250 DCR and spent 17,228 DCR. Using April's daily average DCR/USD rate of $12.34, this is $164K received and $213K spent. At March's average daily rate of $13.40, the USD figure billed for work completed in that month is $231K. As of May 3, Treasury balance is 636,000 DCR (9.17 million USD at $14.42).
 
 Two new proposals were submitted in April, [one](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1) for a billboard marketing campaign was rejected with 17% approval (31% turnout) and [another](https://proposals.decred.org/proposals/83b59ef5ab40193a86073abbd93cea13ed6d071eecc78918ab5cf98cba7c7a67) from CryptoNoticias for a content marketing campaign was also rejected with 31% approval and 30% turnout.
 
@@ -214,6 +214,7 @@ Attended:
 
 Upcoming:
 
+- May 12 - Decred Foundations at Consensus Distributed, online{link will be ready soon}. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richard-red checks in contributors to some important Decred sub-projects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @checkmate will be giving a quick intro to his top 5 Decred on chain metrics.
 - {dates} - [{title}]({event link}) - {city}, {country}. {info}
 
 {announcements in Events domain}
